// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Transactions List > should render the \`TransactionsList\` component in "compact" mode 1`] = `
<dl
  class="detail-list"
>
  <dt
    class="details-list__term details-list__term--table"
  >
     
    ID
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <a
      class="dusk-anchor dusk-anchor--on-surface transaction-details__list-link"
      href="/some-base-path/transactions/transaction?id=4877687c2dbf154248d3ddee9ba0d81e3431f39056f82a46819da041d4ac0e04"
    >
      4877687c2dbf154248d3ddee9ba0d8...31f39056f82a46819da041d4ac0e04
    </a>
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    relative time
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <time
      class="dusk-relative-time transaction-details__list-timestamp"
      datetime="2024-04-16T06:39:09.000Z"
      slot="definition"
    >
      last month
    </time>
  </dd>
   
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    Fee
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    0.000290766
     DUSK
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    Status
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <span
      class="dusk-badge dusk-badge--variant-success transaction-status explorer-badge"
    >
      success
    </span>
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    Type
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <div
      class="transaction-type"
    >
      <svg
        class="dusk-icon dusk-icon--size--large transaction-type__icon"
        data-tooltip-disabled="true"
        data-tooltip-id="main-tooltip"
        data-tooltip-place="top"
        data-tooltip-text="Moonlight"
        data-tooltip-type="info"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,11C21,16.55 17.16,21.74 12,23C6.84,21.74 3,16.55 3,11V5L12,1L21,5V11M12,21C15.75,20 19,15.54 19,11.22V6.3L12,3.18L5,6.3V11.22C5,15.54 8.25,20 12,21Z"
        />
      </svg>
      
       
      <span
        class="dusk-badge dusk-badge--variant-neutral"
      >
        transfer
      </span>
    </div>
    
  </dd>
</dl>
`;

exports[`Transactions List > should render the \`TransactionsList\` component in "full" mode 1`] = `
<dl
  class="detail-list"
>
  <dt
    class="details-list__term details-list__term--table"
  >
     
    ID
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <a
      class="dusk-anchor dusk-anchor--on-surface transaction-details__list-link"
      href="/some-base-path/transactions/transaction?id=4877687c2dbf154248d3ddee9ba0d81e3431f39056f82a46819da041d4ac0e04"
    >
      4877687c2dbf154248d3ddee9ba0d8...31f39056f82a46819da041d4ac0e04
    </a>
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    relative time
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <time
      class="dusk-relative-time transaction-details__list-timestamp"
      datetime="2024-04-16T06:39:09.000Z"
      slot="definition"
    >
      last month
    </time>
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    Gas Price
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    1
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    Gas Limit
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    500,000,000
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    Fee
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    0.000290766
     DUSK
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    Status
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <span
      class="dusk-badge dusk-badge--variant-success transaction-status explorer-badge"
    >
      success
    </span>
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    Type
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <div
      class="transaction-type"
    >
      <svg
        class="dusk-icon dusk-icon--size--large transaction-type__icon"
        data-tooltip-disabled="true"
        data-tooltip-id="main-tooltip"
        data-tooltip-place="top"
        data-tooltip-text="Moonlight"
        data-tooltip-type="info"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,11C21,16.55 17.16,21.74 12,23C6.84,21.74 3,16.55 3,11V5L12,1L21,5V11M12,21C15.75,20 19,15.54 19,11.22V6.3L12,3.18L5,6.3V11.22C5,15.54 8.25,20 12,21Z"
        />
      </svg>
      
       
      <span
        class="dusk-badge dusk-badge--variant-neutral"
      >
        transfer
      </span>
    </div>
    
  </dd>
</dl>
`;
